# Aus-Working-Days

./: MANIFEST.in  README.md  pyproject.toml
src/: __main__.py  aus_working_days.py  business_days_australia.py
src/business_days_australia/: __init__.py  __main__.py  business_days_australia.py
src/business_days_australia/public_holidays/: public_holidays_australia.json
src/public_holidays/: public_holidays_australia.json
